--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
                                 <p class="center-child-list-work-title">04</p>
                                 <div class="center-child-list-work-title-use">
                                     
-                                    <a href="http://laptrinhwebcuathuytrang.000.pe/Buoi4/index.php" class="center-child-list-work-title-use-link">Bài 1</a>
+                                    <a href="http://laptrinhwebcuathuytrang.000.pe/B4/bai1_form.php" class="center-child-list-work-title-use-link">Bài 1</a>
+
+                                    <a href="http://laptrinhwebcuathuytrang.000.pe/B4/bai2_cookies_form.php" class="center-child-list-work-title-use-link">Bài 2.1</a>
+
+                                    <a href="http://laptrinhwebcuathuytrang.000.pe/B4/bai2_session_form.php" class="center-child-list-work-title-use-link">Bài 2.1</a>
                                                            
                                 </div>
                             </li>
