--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                                 <div class="center-child-list-work-title-use">
                                     
                                         <a href="http://laptrinhwebcuathuytrang.000.pe/Buoi8/employee_list.php" class="center-child-list-work-title-use-link">Bài 1</a>
+                                        <a href="http://laptrinhwebcuathuytrang.000.pe/Buoi8/roles_list.php" class="center-child-list-work-title-use-link">Bài 2</a>
+                                        <a href="http://laptrinhwebcuathuytrang.000.pe/Buoi8/department_list.php" class="center-child-list-work-title-use-link">Bài 3</a>
  
                                     
                                 </div>
